fix: ensure plot tooltips not overlapped by other components

--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -146,3 +146,7 @@ p {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.recharts-tooltip-wrapper {
+  z-index: 1000 !important;
+}
